// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successful tests Tags for all C 1`] = `
[
  {
    "id": "label-content-name-mismatch",
    "tags": [
      "wcag21a",
      "wcag253",
      "experimental",
    ],
    "wcag": "WCAG 2.1 Level A, WCAG 2.5.3",
  },
  {
    "id": "duplicate-id-aria",
    "tags": [
      "cat.parsing",
      "wcag2a",
      "wcag411",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.1",
  },
  {
    "id": "svg-img-alt",
    "tags": [
      "cat.text-alternatives",
      "wcag2a",
      "wcag111",
      "section508",
      "section508.22.a",
    ],
    "wcag": "WCAG 2 Level A, WCAG 1.1.1",
  },
  {
    "id": "aria-required-children",
    "tags": [
      "cat.aria",
      "wcag2a",
      "wcag131",
    ],
    "wcag": "WCAG 2 Level A, WCAG 1.3.1",
  },
  {
    "id": "aria-required-parent",
    "tags": [
      "cat.aria",
      "wcag2a",
      "wcag131",
    ],
    "wcag": "WCAG 2 Level A, WCAG 1.3.1",
  },
]
`;

exports[`Successful tests Tags for all J 1`] = `
[
  {
    "id": "label-content-name-mismatch",
    "tags": [
      "wcag21a",
      "wcag253",
      "experimental",
    ],
    "wcag": "WCAG 2.1 Level A, WCAG 2.5.3",
  },
  {
    "id": "duplicate-id-aria",
    "tags": [
      "cat.parsing",
      "wcag2a",
      "wcag411",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.1",
  },
  {
    "id": "svg-img-alt",
    "tags": [
      "cat.text-alternatives",
      "wcag2a",
      "wcag111",
      "section508",
      "section508.22.a",
    ],
    "wcag": "WCAG 2 Level A, WCAG 1.1.1",
  },
]
`;

exports[`Successful tests Tags for general set of violations 1`] = `
[
  {
    "id": "button-name",
    "tags": [
      "cat.name-role-value",
      "wcag2a",
      "wcag412",
      "section508",
      "section508.22.a",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.2",
  },
  {
    "id": "color-contrast",
    "tags": [
      "cat.color",
      "wcag2aa",
      "wcag143",
    ],
    "wcag": "WCAG 2 Level AA, WCAG 1.4.3",
  },
  {
    "id": "duplicate-id-active",
    "tags": [
      "cat.parsing",
      "wcag2a",
      "wcag411",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.1",
  },
  {
    "id": "duplicate-id",
    "tags": [
      "cat.parsing",
      "wcag2a",
      "wcag411",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.1",
  },
  {
    "id": "frame-title",
    "tags": [
      "cat.text-alternatives",
      "wcag2a",
      "wcag241",
      "wcag412",
      "section508",
      "section508.22.i",
    ],
    "wcag": "WCAG 2 Level A, WCAG 2.4.1, WCAG 4.1.2",
  },
  {
    "id": "html-has-lang",
    "tags": [
      "cat.language",
      "wcag2a",
      "wcag311",
    ],
    "wcag": "WCAG 2 Level A, WCAG 3.1.1",
  },
  {
    "id": "image-alt",
    "tags": [
      "cat.text-alternatives",
      "wcag2a",
      "wcag111",
      "section508",
      "section508.22.a",
    ],
    "wcag": "WCAG 2 Level A, WCAG 1.1.1",
  },
  {
    "id": "label",
    "tags": [
      "cat.forms",
      "wcag2a",
      "wcag412",
      "wcag131",
      "section508",
      "section508.22.n",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.2, WCAG 1.3.1",
  },
  {
    "id": "landmark-one-main",
    "tags": [
      "cat.semantics",
      "best-practice",
    ],
    "wcag": "Best practice",
  },
  {
    "id": "landmark-unique",
    "tags": [
      "cat.semantics",
      "best-practice",
    ],
    "wcag": "Best practice",
  },
  {
    "id": "link-in-text-block",
    "tags": [
      "cat.color",
      "experimental",
      "wcag2a",
      "wcag141",
    ],
    "wcag": "WCAG 2 Level A, WCAG 1.4.1",
  },
  {
    "id": "link-name",
    "tags": [
      "cat.name-role-value",
      "wcag2a",
      "wcag412",
      "wcag244",
      "section508",
      "section508.22.a",
    ],
    "wcag": "WCAG 2 Level A, WCAG 4.1.2, WCAG 2.4.4",
  },
  {
    "id": "region",
    "tags": [
      "cat.keyboard",
      "best-practice",
    ],
    "wcag": "Best practice",
  },
  {
    "id": "tabindex",
    "tags": [
      "cat.keyboard",
      "best-practice",
    ],
    "wcag": "Best practice",
  },
]
`;
